rewrite the overflow and fixed width of slider

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ ul{
     background-color: #141922;
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .row-nav{
@@ -278,12 +278,21 @@ h1{
 }
 
 .slider-mid{
-    width: 70%;
+    width: 60%;
     height: 5px;
+}
+
+.time{
+    width: 15%;
+}
+
+.text-align-right{
+    text-align: right;
 }
 
 .col-footer-right{
     width: 25%;
+    justify-content: flex-end;
 }
 
 .icons-right{
@@ -292,7 +301,7 @@ h1{
 }
 
 .slider-container-right{
-    width: 70%;
+    width: 50%;
 }
 
 .slider-right{
